Custom exceptions for each ApiErrorResponse returned by the server. - Unit tests for all these new exceptions in BaseApiClientTest - Local repositories and BaseApiClient now throw these - Bugfixes in ViewModel tests, now all pass. - Update API Contracts to v1.8-SNAPSHOT